# job-scheduler

./: .env.example  .gitignore  README.md  create_data.py  log_handler.py  models.py  plugin_manager.py  plugin_manager_ui.py  pyproject.toml  sample.py  server.py  test.py  test_worker.py  ws_manager.py
alembic/: env.py
alembic/versions/: 001_initial_plugin_and_job.py
alpha-miner-ui/: index.html  package.json
alpha-miner-ui/src/: App.jsx  LogViewer.jsx  ScheduleManager.jsx  api.ts
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.jsx  LogViewer.jsx  MLThresholdsTableField.jsx  api.ts  fields.jsx  index.css  utils.js
frontend/src/components/dashboard/: ConfigForm.jsx  ContextPanel.jsx  ErrorAlert.jsx  Header.jsx  JobDetails.jsx  JobsList.jsx  LoadingBar.jsx  ResponseCard.jsx
frontend/src/components/dashboard/fields/: MLThresholdsTableField.jsx  MultiSelectField.jsx  index.js
plugins/lab_plugin/: __init__.py  lab_plugin.py
plugins/lab_plugin@v0_1_0/: lab_plugin.py
plugins/plugin1/: __init__.py  plugin1.py
plugins/plugin2/: __init__.py  plugin2.py
plugins/prod_plugin/: prod_plugin.py
plugins/prod_plugin@v0_1_0/: __init__.py  prod_plugin.py
plugins/sample_plugin@v0_1_0/: plugin.py
plugins/sample_plugin@v0_2_0/: data.py  plugin.py
plugins/stable_plugin/: __init__.py  stable_plugin.py
plugins/stable_plugin@v0_1_0/: stable_plugin.py
scripts/: database.sql
