[project]
name = "alpha-miner-plugins"
version = "0.1.0"
description = "A pluggy-based plugin management system for alpha-miner workers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pham Tu", email = "tu@orai.io" }]
keywords = [
    "pluggy",
    "plugins",
    "scheduler",
    "fastapi",
    "alpha-miner",
    "trading",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]

dependencies = [
    "pluggy>=1.0",
    "pydantic>=2.0",
    "APScheduler>=3.10",
    "sqlalchemy==2.0.45",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "alembic>=1.16.5",
    "psycopg2",
]

[project.urls]
"Homepage" = "https://github.com/oraichain/py-plugin-starterkit"
"Repository" = "https://github.com/oraichain/py-plugin-starterkit.git"
"Issues" = "https://github.com/oraichain/py-plugin-starterkit/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
alpha-miner-plugins-server = "server:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra -q"
